@@ -1,3 +1,9 @@
+2007-01-23  Miguel de Icaza  <miguel@novell.com>
+
+	* serial.c (poll_serial): Fix for #79073, based on the patch by
+	Leszek Ciesielski, without introducing a GNU libc-ism.
+	(write_serial): Handle EINTR here as well.
+
 2006-11-30  Jonathan Pryor  <jonpryor@vt.edu>
 
 	* map.c: _cnm_return_val_if_overflow() should be a no-op unless DEBUG is
